k8s/hml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hml-ntsistemas-web-app
  namespace: ntsistemas-web-hml
  labels:
    app: hml-ntsistemas-web-app
spec:
  selector:
    app: hml-ntsistemas-web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
