k8s/hml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hml-ntsistemas-web-app
  namespace: ntsistemas-web-hml
  labels:
    app: hml-ntsistemas-web-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hml.ntsistemasweb.com.br
  rules:
    - host: hml.ntsistemasweb.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hml-ntsistemas-web-app
                port:
                  number: 80
